[gd_scene load_steps=9 format=3 uid="uid://dlr1ajpep7m4w"]

[ext_resource type="PackedScene" uid="uid://ctxokpm77q75v" path="res://scenes/world.tscn" id="1_ac1o2"]
[ext_resource type="Script" path="res://scenes/main.gd" id="1_g7wqs"]
[ext_resource type="PackedScene" uid="uid://bj7mjh2d0egce" path="res://scenes/player.tscn" id="2_wy0iy"]
[ext_resource type="PackedScene" uid="uid://bt8xsqniyex8a" path="res://scenes/enemy_spawner.tscn" id="3_t0d05"]
[ext_resource type="Script" path="res://scenes/BulletManager.gd" id="4_8ws75"]
[ext_resource type="PackedScene" uid="uid://dkr450x62pjmu" path="res://scenes/bullet.tscn" id="5_6xxub"]
[ext_resource type="PackedScene" uid="uid://1esl3en710u1" path="res://scenes/hud.tscn" id="7_6fsld"]
[ext_resource type="PackedScene" uid="uid://dtotuuugd2gi5" path="res://scenes/game_over.tscn" id="8_k17au"]

[node name="Main" type="Node"]
script = ExtResource("1_g7wqs")

[node name="World" parent="." instance=ExtResource("1_ac1o2")]

[node name="Player" parent="." instance=ExtResource("2_wy0iy")]
position = Vector2(391, 343)

[node name="BulletManager" type="Node2D" parent="."]
script = ExtResource("4_8ws75")
bullet_scene = ExtResource("5_6xxub")

[node name="EnemySpawner" parent="." instance=ExtResource("3_t0d05")]

[node name="WaveOverTimer" type="Timer" parent="."]
process_mode = 2
one_shot = true

[node name="RestartTimer" type="Timer" parent="."]
process_mode = 2
one_shot = true

[node name="HUD" parent="." instance=ExtResource("7_6fsld")]
offset = Vector2(0, 768)
transform = Transform2D(1, 0, 0, 1, 0, 768)

[node name="GameOver" parent="." instance=ExtResource("8_k17au")]
process_mode = 2

[connection signal="shoot" from="Player" to="BulletManager" method="_on_player_shoot"]
[connection signal="hit_p" from="EnemySpawner" to="." method="_on_enemy_spawner_hit_p"]
[connection signal="timeout" from="WaveOverTimer" to="." method="_on_wave_over_timer_timeout"]
[connection signal="timeout" from="RestartTimer" to="." method="_on_restart_timer_timeout"]
